added nationalRegistries finder address in parallel thread. Fixed flow async of prepare